-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 3.2.0
-
None
-
38d69ae4efc0e225b79afdf78046d4ea5ce3d205
Since some recent changes to dock widgets the QML profiler timeline cannot be detached from the window anymore since the titlebar with the detach button doesn't show up when hovering the top of the widget.
For Gerrit Dashboard: QTCREATORBUG-12899 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
93242,2 | QmlProfiler: Relay mouse move events to the timeline's parent window | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |