QmlProfiler: Relay mouse move events to the timeline's parent window

Like this the DockWidget gets notified when the mouse has entered it
and can show the title bar if necessary.

Change-Id: I164b125f6a4a2099f1f95cf6f0a7699605d12051
Task-number: QTCREATORBUG-12899
Reviewed-by: hjk <hjk121@nokiamail.com>